src/scss/index.scss
$redorange: #f45a4e;
$burntorange: #d84c42;
$denim: #4c659b;
$lightdenim: #c3d7e2;
$darkdenim: #3f5273;
$teal: #3e99c9;
$lightgray: #f1f1f1;

$hourminwidth: 2.25rem;
$meddatewidth: 5rem;
$longdatewidth: 6.75rem;

$importanttextsize: 1.38rem;
$primarytextsize: 1rem;
$secondarytextsize: 0.83rem;

body {
  font-family: "Source Sans Pro", sans-serif;
  font-weight: 300;
  overflow: hidden;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: 0;
}

.tabbar {
  position: fixed;
  bottom: 0;
  right: 0;
  left: 0;
  background-color: $lightdenim;
  color: $denim;
  font-weight: 400;
  z-index: 1000;
}

.tabs {
  list-style: none;
  padding: 0;
  margin: 0.5rem 0;
  display: flex;
  width: 100%;
}

.tab {
  display: inline-block;
  padding: 0 1.5rem;
  flex-grow: 1;
  text-align: center;

  &.is-active {
    color: $redorange;
  }

  a,
  a:hover,
  a:active,
  a:visited {
    color: inherit;
    text-decoration: none;
  }
}

.schedule {
  position: relative;
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  padding: 0.3rem;
  white-space: nowrap;
  overflow: scroll;
}

.schedulecontent {
  display: inline-block;
  width: 100%;
  height: 100%;
  overflow-y: scroll;
}

.shifts {
  list-style: none;
  padding: 1.85rem 0 0 0;
  margin: 0 0 10rem 0;
}

.shift {
  position: relative;
  display: block;
  margin: 2.25rem 0;
}

.shift-entity {
  display: block;
  height: 3.5rem;
  box-sizing: border-box;
  padding: 0.5rem;
  background-color: $denim;
  color: white;

  .delete-button {
    position: absolute;
    right: 0;
    top: 0;
    transform: translate3d(50%, -50%, 0);
  }

  &.is-active {
    box-shadow: 0 0 0 0.05rem white,
                0 0 0 0.15rem $redorange;
  }
}

.button {
  width: 1.25em;
  height: 1.25em;
}

.round-button {
  border: none;
  border-radius: 50%;
  font-size: 1.2rem;
  font-weight: 400;
  line-height: 0;
  padding: 0 0 0.15em 0;
}

.giant-button {
  font-size: 2.5rem;
  width: 3.25rem;
  height: 3.25rem;
}

.delete-button {
  background-color: $redorange;
  color: white;
  text-align: center;
}

.close-button {
  background-color: $lightgray;
  color: $denim;
}

.save-button {
  background-color: $denim;
  color: white;
  font-weight: 300;
  zoom: 0.9;
  padding-bottom: 0;
}

.gridmarks {
  list-style: none;
  padding: 0;
  margin: 0;
  position: absolute;
  top: 0.3rem;
  left: 0.3rem;
  right: 0.3rem;
  bottom: 0.3rem;
  z-index: -1;
  display: flex;
}

.gridmarks-col {
  display: inline-block;
  flex-grow: 1;
  box-sizing: border-box;
  border-left: 1px solid $lightdenim;
  padding: 0 1% 0 0.25%;
  min-width: $hourminwidth;
}

.gridmarks-header {
  list-style: none;
  margin: 0;
  padding: 0;
  display: flex;
  position: absolute;
  top: 0;
  left: 0.3rem;
  right: 0.3rem;
  height: 2.5rem;
  background: linear-gradient(
    to bottom,
    rgba(255, 255, 255, 1.0) 20%,
    rgba(255, 255, 255, 0.9) 40%,
    rgba(255, 255, 255, 0.9) 80%,
    rgba(255, 255, 255, 0.0) 100%);
  z-index: 1;
}

.gridmarks-label {
  display: inline-block;
  flex-grow: 1;
  min-width: $hourminwidth;
  box-sizing: border-box;
  font-size: $importanttextsize;
  padding: 0.5rem 0 0 0.4rem;
  white-space: nowrap;
  color: $teal;

  /* initial time display */

  .shortlabel {
    display: block;
  }

  .medlabel,
  .longlabel {
    display: none;
  }

  /* alternate display for time based on both width and number of columns */

  @mixin med {
    width: $meddatewidth;

    .medlabel {
      display: block;
    }

    .shortlabel,
    .longlabel {
      display: none;
    }
  }

  @mixin long {
    width: $longdatewidth;

    .longlabel {
      display: block;
    }

    .shortlabel,
    .medlabel {
      display: none;
    }
  }

  @for $numhours from 1 through 24 {
    .hourscount-#{$numhours} & {
      @media only screen and (min-width: $numhours * $meddatewidth) {
        @include med;
      }

      @media only screen and (min-width: $numhours * $longdatewidth) {
        @include long;
      }
    }
  }
}

// Force the schedule content to assume the correct width
@for $numhours from 1 through 24 {
  .hourscount-#{$numhours} .schedulecontent::after {
    content: '';
    display: block;
    min-width: $hourminwidth * $numhours;
  }
}

.tray {
  position: fixed;
  bottom: 0;
  padding-bottom: 3rem;
  width: 100%;
  background: linear-gradient(
    to top, rgba(255, 255, 255, 1) 40%, rgba(255, 255, 255, 0) 100%);
}

.addshift {
  white-space: nowrap;
  overflow-x: scroll;
  overflow-y: hidden;
  background-color: white;
}

.employeebadge {
  $width: 6rem;
  $height: 6.5rem;

  display: inline-block;
  margin: 0.3rem;
  position: relative;
  width: $width;
  height: $height;

  &::before {
    content: '';
    position: absolute;
    width: 0;
    height: 0;
    border-width: 0.5rem ($width / 2) 0 ($width / 2);
    border-style: solid;
    border-color: transparent;
    border-bottom-color: $denim;
    transition: border-bottom 0.15s 0.1s,
                border-top 0.15s 0s,
                color 0.15s 0s;
  }

  &.is-selected::before {
    border-width: 0 ($width / 2) 0.5rem ($width / 2);
    border-bottom-color: $redorange;
    transition-delay: 00s, 0.1s, 0s;
  }
}

.employeebadge-entity {
  display: block;
  padding: 0.5rem 0.3rem;
  margin-top: 0.5rem;
  height: 100%;
  background-color: $denim;
  color: white;
  transition: all 0.15s;
  position: relative;
  z-index: 0;

  .employeebadge.is-selected & {
    background-color: $redorange;
  }
}

.employeebadge-initial {
  position: absolute;
  z-index: -1;
  top: 0;
  left: 0;
  right: 0;
  text-align: center;
  font-size: 6rem;
  line-height: 6rem;
  color: $darkdenim;
  transition: all 0.15s;

  .employeebadge.is-selected & {
    color: $burntorange;
  }
}

.employeebadge-checkbox,
.shift-checkbox {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  clip: rect(1px, 1px, 1px, 1px);
}

.employee-name,
.employee-role,
.employee-rate,
.employee-scheduled {
  white-space: nowrap;
  overflow-x: hidden;
  text-overflow: ellipsis;
}

.employee-role {
  font-size: $secondarytextsize;
  font-style: italic;
}

.employee-rate {
  font-size: $secondarytextsize;
}

.employee-role + .employee-rate {
  margin-top: 0.5rem;
}

.employee-scheduled {
  font-size: $secondarytextsize;
  font-style: italic;
}

.slider {
  position: relative;
  width: 10rem;
  height: 1px;
  background-color: blue;
  margin: 1rem;

  .bead {
    position: absolute;
    transform: translate3d(-50%, -50%, 0);
    height: 0.7rem;
    width: 0.7rem;
    border-radius: 50%;
    background-color: #0c0;
  }
}

.employee-list {
  list-style: none;
  padding: 0 0 7rem 0;
  margin: 0;
}

.employee {
  font-size: 1.1rem;
  color: $denim;
  border-top: 1px solid $lightdenim;
  padding: 1rem;
}

.addemployee,
.editshift {
  position: fixed;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
  padding: 1rem 1.5rem 4.25rem 1.5rem;
  background-color: white;
  z-index: 100;

  .button {
    position: absolute;
    bottom: 3rem;
    box-shadow: 0 0.15rem 0.5rem rgba(0, 0, 0, 0.5);
  }

  .delete-button {
    left: 1rem;
  }

  .close-button {
    left: 50%;
    right: 50%;
    transform: translateX(-50%);
  }

  .save-button {
    right: 1rem;
  }
}

.add-button {
  background-color: $denim;
  color: white;
}

.new-employee {
  position: fixed;
  bottom: 3rem;
  right: 1rem;
}

.material-label {
  border-top: 1px solid $lightdenim;
  display: block;
  position: relative;
  margin: 0.25rem 0.25rem 1rem 0.25rem;
  height: $importanttextsize * 1.5;
  text-align: right;
  color: $teal;
}

.material-input {
  position: absolute;
  left: 0;
  border: none;
  font-size: $importanttextsize;
  font-weight: inherit;
  font-family: inherit;
  width: 100%;
  background-color: transparent;
  color: $denim;
}

.active-employee {
  background-color: $redorange;
}

